--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -26,6 +26,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
+        android:focusable="true"
         android:fontFamily="@font/alfa_slab_one"
         android:gravity="center_horizontal"
         android:text="Hello and welcome to the SDA t-shirt sales application!"
