--- a/app/src/main/res/layout/recycler_list_item.xml
+++ b/app/src/main/res/layout/recycler_list_item.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:padding="15dp"
-    android:id="@+id/listItemLayout">
+    android:id="@+id/listItemLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
+    android:padding="15dp">
 
     <ImageView
         android:id="@+id/imageItem"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:contentDescription="@string/images_desc"
-        android:src="@drawable/black"
-        />
+        android:src="@drawable/black" />
 
     <TextView
         android:id="@+id/shirtDesc"
